# deformabletracker

./: CMakeLists.txt  LICENSE  README.TXT
data/: ControlPointIDs.txt  cam.ext  cam.intr  cam.tdir  im_corners.txt  mesh.pts  mesh.tri  model.png.roi  world_corners.txt
src/: Camera.cpp  Camera.h  Reconstruction.cpp  Reconstruction.h
src/Linear/: EqualConstrFunction.cpp  EqualConstrFunction.h  EqualConstrOptimize.cpp  EqualConstrOptimize.h  Function.cpp  Function.h  IneqConstrFunction.cpp  IneqConstrFunction.h  IneqConstrOptimize.cpp  IneqConstrOptimize.h  LinearAlgebraUtils.cpp  LinearAlgebraUtils.h  ObjectiveFunction.cpp  ObjectiveFunction.h
src/MatchTracker/: InlierMatchTracker.cpp  InlierMatchTracker.h  LKPointTracker.cpp  LKPointTracker.h
src/Mesh/: LaplacianMesh.cpp  LaplacianMesh.h  TriangleMesh.cpp  TriangleMesh.h
src/PointMatching/: FernKeypointMatcher3D2D.cpp  FernKeypointMatcher3D2D.h  KeypointMatcher3D2D.cpp  KeypointMatcher3D2D.h
src/RealtimeDemo/: RealtimeDemo.cpp  RealtimeDemo.h
src/Utils/: DUtils.cpp  DUtils.h  DefinedMacros.h  Visualization.cpp  Visualization.h
src/test/: test_deformable_realtime.cpp
